--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -17,7 +17,7 @@
 		<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#B8E0F3"/>
 		<SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black"/>
 
-		<Style x:Key="GrayOnDisabledButton" TargetType="Button">
+		<Style x:Key="GrayOnDisabledControl" TargetType="Control">
 			<Style.Triggers>
 				<DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsEnabled}" Value="False">
 					<Setter Property="Foreground" Value="#999999"></Setter>
