--- a/VidCoder/View/ApplyUpdateConfirmation.xaml
+++ b/VidCoder/View/ApplyUpdateConfirmation.xaml
@@ -2,8 +2,8 @@
 	x:Class="VidCoder.ApplyUpdateConfirmation"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-	xmlns:prop="clr-namespace:VidCoder.Properties" Style="{StaticResource NormalWindow}"
-	xmlns:res="clr-namespace:VidCoder.LocalResources"
+	xmlns:res="clr-namespace:VidCoder.Resources"
+	Style="{StaticResource NormalWindow}"
 	Title="{x:Static res:MiscRes.ApplyUpdateDialogTitle}" Height="174" Width="347" WindowStartupLocation="CenterOwner" ShowInTaskbar="False"
 	TextOptions.TextFormattingMode="Display">
 	<Grid>
@@ -16,8 +16,8 @@
 		<StackPanel
 			Orientation="Horizontal"
 			HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,12,12">
-			<Button Margin="0,0,0,0" Name="yesButton" HorizontalAlignment="Right" MinWidth="75" Height="23" VerticalAlignment="Bottom" IsDefault="True" Click="yesButton_Click" Content="{x:Static prop:Resources.Yes}"/>
-			<Button Margin="6,0,0,0" Name="noButton" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" MinWidth="75" IsCancel="True" Content="{x:Static prop:Resources.No}" />
+			<Button Margin="0,0,0,0" Name="yesButton" HorizontalAlignment="Right" MinWidth="75" Height="23" VerticalAlignment="Bottom" IsDefault="True" Click="yesButton_Click" Content="{x:Static res:CommonRes.Yes}"/>
+			<Button Margin="6,0,0,0" Name="noButton" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Right" MinWidth="75" IsCancel="True" Content="{x:Static res:CommonRes.No}" />
 			<Button Height="23" HorizontalAlignment="Right" Margin="20,0,0,0" Name="disableUpdatesButton" VerticalAlignment="Bottom" MinWidth="93" Click="disableUpdatesButton_Click" Content="{x:Static res:MiscRes.DisableUpdatesButton}" />
 		</StackPanel>
 
