--- a/VidCoder/View/FileConflictDialog.xaml
+++ b/VidCoder/View/FileConflictDialog.xaml
@@ -1,9 +1,9 @@
 ﻿<Window
 	x:Class="VidCoder.View.FileConflictDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:LocalResources="clr-namespace:VidCoder.LocalResources"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:Properties="clr-namespace:VidCoder.Properties" Background="WhiteSmoke"
-	Title="{x:Static LocalResources:MiscRes.FileConflictDialogTitle}" Height="186" Width="377" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"
+	Title="{x:Static res:MiscRes.FileConflictDialogTitle}" Height="186" Width="377" ResizeMode="NoResize" WindowStartupLocation="CenterOwner"
 	TextOptions.TextFormattingMode="Display">
 	<Grid>
 		<TextBlock
@@ -15,15 +15,15 @@
 			Orientation="Horizontal"
 			HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,12,12">
 			<Button
-				Content="{x:Static LocalResources:MiscRes.OverwriteButton}" IsDefault="True"
+				Content="{x:Static res:MiscRes.OverwriteButton}" IsDefault="True"
 				Command="{Binding OverwriteCommand}"
 				Height="23" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" MinWidth="75" />
 			<Button
-				Content="{x:Static LocalResources:MiscRes.AutoRenameButton}"
+				Content="{x:Static res:MiscRes.AutoRenameButton}"
 				Command="{Binding RenameCommand}"
 				Height="23" HorizontalAlignment="Right" Margin="6,0,0,0" VerticalAlignment="Bottom" MinWidth="75" Padding="6,0" />
 			<Button
-				Content="{x:Static Properties:Resources.Cancel}"
+				Content="{x:Static res:CommonRes.Cancel}"
 				Command="{Binding CancelCommand}"
 				Height="23" HorizontalAlignment="Right" Margin="6,0,0,0" Name="button3" VerticalAlignment="Bottom" MinWidth="75" IsCancel="True" />
 		</StackPanel>
