--- a/VidCoder/View/LogWindow.xaml
+++ b/VidCoder/View/LogWindow.xaml
@@ -3,7 +3,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
-	xmlns:res="clr-namespace:VidCoder.LocalResources" 
+	xmlns:res="clr-namespace:VidCoder.Resources" 
 	Title="{x:Static res:LogRes.LogWindowTitle}" Height="393" Width="459"
 	Style="{StaticResource NormalWindow}"
 	WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
@@ -33,7 +33,7 @@
 			Command="{Binding CopyCommand}">
 			<StackPanel Orientation="Horizontal" Margin="5,0">
 				<Image Source="/Icons/copy.png" Width="16" Height="16" />
-				<TextBlock Text="{x:Static prop:Resources.Copy}" Margin="4,0,0,0" />
+				<TextBlock Text="{x:Static res:CommonRes.Copy}" Margin="4,0,0,0" />
 			</StackPanel>
 		</Button>
 
