--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -3,7 +3,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:Model="clr-namespace:VidCoder.Model" Title="{x:Static res:OptionsRes.OptionsDialogTitle}" Height="415" Width="571"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
-	xmlns:res="clr-namespace:VidCoder.LocalResources" 
+	xmlns:res="clr-namespace:VidCoder.Resources" 
 	Style="{StaticResource NormalWindow}" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" Closing="Window_Closing" xmlns:my="clr-namespace:VidCoder.Controls" Closed="Window_Closed"
 	TextOptions.TextFormattingMode="Display">
 	<Window.Resources>
@@ -54,7 +54,7 @@
 							IsEnabled="{Binding UseCustomCompletionSound}"/>
 						<Button
 							Grid.Column="2" Margin="6,0,0,0" Padding="3,2" VerticalAlignment="Center"
-							Content="{x:Static prop:Resources.Browse}"
+							Content="{x:Static res:CommonRes.Browse}"
 							IsEnabled="{Binding UseCustomCompletionSound}"
 							Command="{Binding BrowseCompletionSoundCommand}"/>
 					</Grid>
@@ -120,7 +120,7 @@
 							Grid.Column="2"
 							Height="23" HorizontalAlignment="Right" Margin="5,0,8,0" VerticalAlignment="Top" MinWidth="75"
 							Command="{Binding BrowsePathCommand}"
-							Content="{x:Static prop:Resources.Browse}" />
+							Content="{x:Static res:CommonRes.Browse}" />
 					</Grid>
 
 					<CheckBox
@@ -204,7 +204,7 @@
 					<TextBlock 
 						HorizontalAlignment="Left" Margin="6,6,0,0" Text="{x:Static res:OptionsRes.AutomaticAudioSelection}" VerticalAlignment="Top" />
 					<RadioButton 
-						Content="{x:Static prop:Resources.Disabled}" Height="16" HorizontalAlignment="Left" Margin="28,31,0,0" VerticalAlignment="Top"
+						Content="{x:Static res:CommonRes.Disabled}" Height="16" HorizontalAlignment="Left" Margin="28,31,0,0" VerticalAlignment="Top"
 						IsChecked="{Binding AutoAudio, Converter={StaticResource EnumBoolConverter}, ConverterParameter=Disabled}"
 						GroupName="autoAudio1"
 						ToolTip="{x:Static res:OptionsRes.AutoAudioDisabledToolTip}"/>
@@ -228,7 +228,7 @@
 						IsChecked="{Binding AutoAudioAll}"
 						IsEnabled="{Binding AutoAudioLanguageSelected}" Style="{StaticResource GrayOnDisabledControl}"/>
 					<RadioButton 
-						Content="{x:Static prop:Resources.All}" Height="16" HorizontalAlignment="Left" Margin="28,98,0,0" VerticalAlignment="Top"
+						Content="{x:Static res:CommonRes.All}" Height="16" HorizontalAlignment="Left" Margin="28,98,0,0" VerticalAlignment="Top"
 						IsChecked="{Binding AutoAudio, Converter={StaticResource EnumBoolConverter}, ConverterParameter=All}"
 						GroupName="autoAudio3"/>
 					
@@ -237,20 +237,20 @@
 						Height="23" HorizontalAlignment="Left" Margin="6,6,0,0" Text="{x:Static res:OptionsRes.AutomaticSubtitleSelection}" VerticalAlignment="Top" />
 					<RadioButton
 						Grid.Column="2"
-						Content="{x:Static prop:Resources.Disabled}" Height="16" HorizontalAlignment="Left" Margin="28,31,0,0" VerticalAlignment="Top"
+						Content="{x:Static res:CommonRes.Disabled}" Height="16" HorizontalAlignment="Left" Margin="28,31,0,0" VerticalAlignment="Top"
 						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=Disabled}"
 						GroupName="autoSubtitle1"
 						ToolTip="{x:Static res:OptionsRes.AutoSubtitleDisabledToolTip}"/>
 					<RadioButton 
 						Grid.Column="2"
 						Content="{x:Static res:OptionsRes.ForeignAudioSearchRadioButton}" Height="16" HorizontalAlignment="Left" Margin="28,53,0,0" VerticalAlignment="Top"
-						ToolTip="{x:Static prop:Resources.ForeignAudioSearchToolTip}"
+						ToolTip="{x:Static res:CommonRes.ForeignAudioSearchToolTip}"
 						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=ForeignAudioSearch}"
 						GroupName="autoSubtitle2"/>
 					<CheckBox 
 						Grid.Column="2"
 						Content="{x:Static res:OptionsRes.BurnInCheckBox}" Height="16" HorizontalAlignment="Left" Margin="50,73,0,0" VerticalAlignment="Top"
-						ToolTip="{x:Static prop:Resources.BurnedSubtitleToolTip}"
+						ToolTip="{x:Static res:CommonRes.BurnedSubtitleToolTip}"
 						IsChecked="{Binding AutoSubtitleBurnIn}"
 						IsEnabled="{Binding AutoSubtitleFasSelected}" Style="{StaticResource GrayOnDisabledControl}" />
 					<StackPanel 
@@ -283,7 +283,7 @@
 						IsEnabled="{Binding AutoSubtitleLanguageSelected}" Style="{StaticResource GrayOnDisabledControl}" />
 					<RadioButton 
 						Grid.Column="2"
-						Content="{x:Static prop:Resources.All}" Height="16" HorizontalAlignment="Left" Margin="28,165,0,0" Name="radioButton9" VerticalAlignment="Top"
+						Content="{x:Static res:CommonRes.All}" Height="16" HorizontalAlignment="Left" Margin="28,165,0,0" Name="radioButton9" VerticalAlignment="Top"
 						IsChecked="{Binding AutoSubtitle, Converter={StaticResource EnumBoolConverter}, ConverterParameter=All}"
 						GroupName="autoSubtitle4"/>
 				</Grid>
@@ -313,7 +313,7 @@
 						Command="{Binding OpenAddProcessDialogCommand}"/>
 					<Button
 						Grid.Row="1" Grid.Column="1"
-						Content="{x:Static prop:Resources.Remove}" Height="23" HorizontalAlignment="Right" Margin="0,60,6,0" VerticalAlignment="Top" MinWidth="75"
+						Content="{x:Static res:CommonRes.Remove}" Height="23" HorizontalAlignment="Right" Margin="0,60,6,0" VerticalAlignment="Top" MinWidth="75"
 						Command="{Binding RemoveProcessCommand}"/>
 				</Grid>
 			</TabItem>
@@ -418,10 +418,10 @@
 			HorizontalAlignment="Right" Margin="0,0,6,6" VerticalAlignment="Bottom">
 			<Button
 				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsDefault="True"
-				Command="{Binding SaveSettingsCommand}" Margin="0,0,6,0" Content="{x:Static prop:Resources.Ok}" />
+				Command="{Binding SaveSettingsCommand}" Margin="0,0,6,0" Content="{x:Static res:CommonRes.Ok}" />
 			<Button
 				Height="23" HorizontalAlignment="Right" VerticalAlignment="Bottom" MinWidth="75" IsCancel="True"
-				Command="{Binding CancelCommand}" Content="{x:Static prop:Resources.Cancel}" />
+				Command="{Binding CancelCommand}" Content="{x:Static res:CommonRes.Cancel}" />
 		</StackPanel>
 	</Grid>
 </Window>
