--- a/VidCoder/View/Panels/AudioPanel.xaml
+++ b/VidCoder/View/Panels/AudioPanel.xaml
@@ -6,7 +6,7 @@
 	xmlns:converters="clr-namespace:VidCoder.Converters"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
-	xmlns:res="clr-namespace:VidCoder.LocalResources" 
+	xmlns:res="clr-namespace:VidCoder.Resources" 
 	mc:Ignorable="d" 
 	d:DesignHeight="300" d:DesignWidth="800">
 	<UserControl.Resources>
