--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -4,7 +4,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
-	xmlns:res="clr-namespace:VidCoder.LocalResources" 
+	xmlns:res="clr-namespace:VidCoder.Resources" 
 	xmlns:local="clr-namespace:VidCoder"
 	xmlns:localmodel="clr-namespace:VidCoder.Model"
 	Title="{Binding Title}"
@@ -225,7 +225,7 @@
 						Value="{Binding PreviewPercentComplete}"/>
 					<Button
 						Grid.Column="2"
-						Content="{x:Static prop:Resources.Cancel}"
+						Content="{x:Static res:CommonRes.Cancel}"
 						HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="23" MinWidth="55"
 						Command="{Binding CancelPreviewCommand}"/>
 				</Grid>
