--- a/VidCoder/View/ScanMultipleDialog.xaml
+++ b/VidCoder/View/ScanMultipleDialog.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
 	x:Class="VidCoder.View.ScanMultipleDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:LocalResources="clr-namespace:VidCoder.LocalResources"
-	Title="{x:Static LocalResources:MiscRes.ScanMultipleWindowTitle}" Height="90" Width="426" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:res="clr-namespace:VidCoder.Resources"
+	Title="{x:Static res:MiscRes.ScanMultipleWindowTitle}" Height="90" Width="426" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ShowInTaskbar="False" Closing="Window_Closing"
 	TextOptions.TextFormattingMode="Display">
 	<Grid>
 		<ProgressBar
