Overhauled the Options dialog: Made it cleaner and better organized. Added an Updates tab with more detailed status and the ability to manually check for updates.
--HG--
branch : beta

--- a/VidCoder/View/AddAutoPauseProcessDialog.xaml
+++ b/VidCoder/View/AddAutoPauseProcessDialog.xaml
@@ -18,7 +18,7 @@
 				Content="{x:Static res:MiscRes.ProcessNameLabel}" HorizontalAlignment="Left" VerticalAlignment="Center" />
 			<TextBox
 				Grid.Column="1"
-				Height="23" VerticalAlignment="Center"
+				Height="23" VerticalAlignment="Center" VerticalContentAlignment="Center"
 				Text="{Binding ProcessName}"/>
 		</Grid>
 		
